%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Player Animator
  serializedVersion: 5
  m_AnimatorParameters:
  - m_Name: Strafe X
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Strafe Y
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Angular
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Crouching
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 5
    m_Name: Base Layer
    m_StateMachine: {fileID: 1107807786731683468}
    m_Mask: {fileID: 0}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
  - serializedVersion: 5
    m_Name: Aiming
    m_StateMachine: {fileID: 1107479207627909352}
    m_Mask: {fileID: 101100000, guid: 8705d95a91de64f5b920df36d2a781ef, type: 2}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 1
    m_IKPass: 1
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!206 &206253120438428726
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: ff532249248a17542a2d0e85a56be5c2, type: 3}
    m_Threshold: 0
    m_Position: {x: 0.09014274, y: 1.7409436}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Strafe X
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 91a6a36334337734f993125f13c3db1f, type: 3}
    m_Threshold: 0.14285715
    m_Position: {x: -1.2245948, y: 1.2938157}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Strafe X
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: fa59f53f56518884ab226e38d040a9f6, type: 3}
    m_Threshold: 0.2857143
    m_Position: {x: 1.2924215, y: 1.2162529}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Strafe X
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 3d16e4cdf36eb29459e0ebddcde3352c, type: 3}
    m_Threshold: 0.42857143
    m_Position: {x: -1.7871653, y: -0.06774112}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Strafe X
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: d68ec01a51030db479948e7c3edc2f71, type: 3}
    m_Threshold: 0.5714286
    m_Position: {x: 1.7887821, y: 0.022938682}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Strafe X
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 57828f2262fb16744847b897c72b0232, type: 3}
    m_Threshold: 0.71428573
    m_Position: {x: -0.06323756, y: -1.7585552}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Strafe X
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 1ebdc45c1d511584097f13c1b9ee9b2f, type: 3}
    m_Threshold: 0.85714287
    m_Position: {x: -1.2162755, y: -1.2698667}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Strafe X
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 9c2bcca514c43e44ba3f78e3520384ba, type: 3}
    m_Threshold: 1
    m_Position: {x: 1.2186702, y: -1.296585}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Strafe X
    m_Mirror: 0
  m_BlendParameter: Strafe X
  m_BlendParameterY: Strafe Y
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 0
  m_NormalizedBlendValues: 0
  m_BlendType: 1
--- !u!206 &206457179474702718
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 38c424e34994ea84e87d41bac7cdc9e2, type: 3}
    m_Threshold: 0
    m_Position: {x: -0.26061043, y: 4.2569704}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Strafe X
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 86a08a0cfe46cdd4f8f0a9d712ed3ea2, type: 3}
    m_Threshold: 0.14285715
    m_Position: {x: -3.3854077, y: 2.9300928}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Strafe X
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 46256fc98f8876c49990e9bb2ca474e5, type: 3}
    m_Threshold: 0.2857143
    m_Position: {x: 3.049857, y: 3.0577073}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Strafe X
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 77abf2bb010166049b52c4e48f5de1b0, type: 3}
    m_Threshold: 0.42857143
    m_Position: {x: -2.975346, y: -3.2910507}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Strafe X
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 4e17be6532a437f45bf2eff7680967d9, type: 3}
    m_Threshold: 0.5714286
    m_Position: {x: 3.3618386, y: -2.948091}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Strafe X
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: d71076c1d40a9604d9cf178282130c4a, type: 3}
    m_Threshold: 0.71428573
    m_Position: {x: 0.21518299, y: -4.445693}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Strafe X
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 23b4b0fb084550f40ac93fb9ad2a6e5c, type: 3}
    m_Threshold: 0.85714287
    m_Position: {x: -4.395333, y: -0.39531058}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Strafe X
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 1d74dbd1b6149cf4e862dbb5dda2e602, type: 3}
    m_Threshold: 1
    m_Position: {x: 4.4029894, y: -0.18997633}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Strafe X
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: fc555841c7f0f5946a95afaad0da651e, type: 3}
    m_Threshold: 1.1428571
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Strafe X
    m_Mirror: 0
  m_BlendParameter: Strafe X
  m_BlendParameterY: Strafe Y
  m_MinThreshold: 0
  m_MaxThreshold: 1.1428571
  m_UseAutomaticThresholds: 0
  m_NormalizedBlendValues: 0
  m_BlendType: 1
--- !u!206 &206524423144361814
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 17d7f005761ec0a48a931267807d9aec, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Strafe X
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: bea0209f91bd4404d8db093450726d84, type: 3}
    m_Threshold: 0.125
    m_Position: {x: -0.0005482193, y: -1.6059557}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Strafe X
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 6ae44c8831449914fb3c35be7d128ac1, type: 3}
    m_Threshold: 0.25
    m_Position: {x: -1.2820007, y: -1.2563927}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Strafe X
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: fcee7654b03615d4ba3ff5b013eaaf6e, type: 3}
    m_Threshold: 0.375
    m_Position: {x: 1.3614415, y: -1.2058914}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Strafe X
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 4abfe067226bd854d8733cfbf5b75061, type: 3}
    m_Threshold: 0.5
    m_Position: {x: -0.045350417, y: 1.6345851}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Strafe X
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: a5ec3707600f5a044a70391ff0b0e20e, type: 3}
    m_Threshold: 0.625
    m_Position: {x: -1.3282648, y: 1.1548951}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Strafe X
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: f0547bb82bb4f1a44969304a5b6f1a17, type: 3}
    m_Threshold: 0.75
    m_Position: {x: 1.340352, y: 1.2717645}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Strafe X
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: 57ca9a413b8c08a4d8fa4dc15077e5ab, type: 3}
    m_Threshold: 0.875
    m_Position: {x: -1.8834927, y: 0.046493005}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Strafe X
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 7400000, guid: a9048dc7a9d7b2b4eaace71296f1c8ab, type: 3}
    m_Threshold: 1
    m_Position: {x: 1.8840082, y: -0.048022784}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: Strafe X
    m_Mirror: 0
  m_BlendParameter: Strafe X
  m_BlendParameterY: Strafe Y
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 0
  m_NormalizedBlendValues: 0
  m_BlendType: 1
--- !u!1101 &1101052917161888300
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Crouching
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 1102316640390936058}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.63114756
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1101 &1101693295604701398
AnimatorStateTransition:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: 
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Crouching
    m_EventTreshold: 0
  m_DstStateMachine: {fileID: 0}
  m_DstState: {fileID: 1102342564358382070}
  m_Solo: 0
  m_Mute: 0
  m_IsExit: 0
  serializedVersion: 3
  m_TransitionDuration: 0.25
  m_TransitionOffset: 0
  m_ExitTime: 0.77722776
  m_HasExitTime: 0
  m_HasFixedDuration: 1
  m_InterruptionSource: 0
  m_OrderedInterruption: 1
  m_CanTransitionToSelf: 1
--- !u!1102 &1102316640390936058
AnimatorState:
  serializedVersion: 5
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Crouching
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 1101693295604701398}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 206524423144361814}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1102 &1102342564358382070
AnimatorState:
  serializedVersion: 5
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Running
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions:
  - {fileID: 1101052917161888300}
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 206457179474702718}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1102 &1102759096555039510
AnimatorState:
  serializedVersion: 5
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Walking
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 206253120438428726}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1102 &1102875794630416388
AnimatorState:
  serializedVersion: 5
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Aiming Front
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 7400000, guid: 1347fe20fd4744fc38d0967e65e505d4, type: 3}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1107 &1107479207627909352
AnimatorStateMachine:
  serializedVersion: 5
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Aiming
  m_ChildStates:
  - serializedVersion: 1
    m_State: {fileID: 1102875794630416388}
    m_Position: {x: 290, y: 126, z: 0}
  m_ChildStateMachines: []
  m_AnyStateTransitions: []
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: 50, y: 20, z: 0}
  m_EntryPosition: {x: 50, y: 120, z: 0}
  m_ExitPosition: {x: 800, y: 120, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: 1102875794630416388}
--- !u!1107 &1107807786731683468
AnimatorStateMachine:
  serializedVersion: 5
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Base Layer
  m_ChildStates:
  - serializedVersion: 1
    m_State: {fileID: 1102759096555039510}
    m_Position: {x: 240, y: 204, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 1102342564358382070}
    m_Position: {x: -276, y: 204, z: 0}
  - serializedVersion: 1
    m_State: {fileID: 1102316640390936058}
    m_Position: {x: -108, y: 324, z: 0}
  m_ChildStateMachines: []
  m_AnyStateTransitions: []
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: 50, y: 20, z: 0}
  m_EntryPosition: {x: -120, y: 72, z: 0}
  m_ExitPosition: {x: 800, y: 120, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: 1102342564358382070}
